--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+target/
+
+# Eclipse ignored files
+
+.settings/
+.classpath
+.project
+
+# VSCode ignored files
+.vscode/settings.json
